Rajout du mapping avec l'objet profiles .

--- a/gcm/pom.xml
+++ b/gcm/pom.xml
@@ -12,22 +12,22 @@
 		<module>gcm-web</module>
 		<!-- module>gcm-ear</module -->
 	</modules>
-	
-	
+
+
 	<properties>
 		<spring.version>3.2.3.RELEASE</spring.version>
 		<junit.version>4.11</junit.version>
 		<logback.version>1.0.13</logback.version>
 		<slf4j.version>1.7.5</slf4j.version>
-		<compiler-version>2.3.2</compiler-version>
+		<compiler.version>2.3.2</compiler.version>
 	</properties>
-	
+
 	<build>
 		<plugins>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<inherited>true</inherited>
-				<version>${compiler-version}</version>
+				<version>${compiler.version}</version>
 				<configuration>
 					<source>1.6</source>
 					<target>1.6</target>
@@ -47,8 +47,8 @@
 
 		</plugins>
 	</build>
-	
 
+	
 	<dependencyManagement>
 		<dependencies>
 			<!-- Junit dependencies -->
@@ -111,9 +111,5 @@
 		</dependencies>
 	</dependencyManagement>
 
-	<scm>
-		<connection>scm:git:https://bitbucket.org/dev_gcm/gestion-cabinet-medical/src/6e4be24f0188/gcm?at=master</connection>
-		<developerConnection>scm:git:https://bitbucket.org/dev_gcm/gestion-cabinet-medical/src/6e4be24f0188/gcm?at=master</developerConnection>
-		<url>scm:git:https://bitbucket.org/dev_gcm/gestion-cabinet-medical/src/6e4be24f0188/gcm?at=master</url>
-	</scm>
+
 </project>
