--- a/gcm/gcm-web/pom.xml
+++ b/gcm/gcm-web/pom.xml
@@ -61,9 +61,10 @@
 		</dependency>
 		<dependency>
 			<groupId>javax.servlet</groupId>
-			<artifactId>servlet-api</artifactId>
-			<version>2.5</version>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>3.0.1</version>
 		</dependency>
+
 		<!-- Primefaces dependency -->
 		<dependency>
 			<groupId>org.primefaces.extensions</groupId>
