--- a/gcm/pom.xml
+++ b/gcm/pom.xml
@@ -125,9 +125,9 @@
 	</dependencyManagement>
 	
 	<scm>
-		<connection>scm:git:https://github.com/GCM-TEAM/MedicalOfficeManagement.git</connection>
-		<developerConnection>scm:git:https://github.com/GCM-TEAM/MedicalOfficeManagement.git</developerConnection>
-		<url>https://github.com/GCM-TEAM/MedicalOfficeManagement.git</url>
+		<connection>scm:git:https://c7f422cb8cc320173649df3d023755dba78666ce@github.com:mloubari/GCM-TEAM/MedicalOfficeManagement.git</connection>
+		<developerConnection>scm:git:https://c7f422cb8cc320173649df3d023755dba78666ce@github.com:mloubari/GCM-TEAM/MedicalOfficeManagement.git</developerConnection>
+		<url>https://c7f422cb8cc320173649df3d023755dba78666ce@github.com:mloubari/GCM-TEAM/MedicalOfficeManagement.git</url>
 	</scm>
 
 </project>
