--- a/gcm/gcm-dao/pom.xml
+++ b/gcm/gcm-dao/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>fr.gcm</groupId>
     <artifactId>gcm</artifactId>
-    <version>1.0.0</version>
+    <version>1.0.0-SNAPSHOT</version>
    </parent>
   <artifactId>gcm-dao</artifactId>
   <properties>
