--- a/gcm/pom.xml
+++ b/gcm/pom.xml
@@ -3,28 +3,14 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>fr.gcm</groupId>
 	<artifactId>gcm</artifactId>
-	<version>1.0.0</version>
+	<version>1.0.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
-
-
 
 	<modules>
 		<module>gcm-dao</module>
 		<module>gcm-service</module>
+		<module>gcm-web</module>
 	</modules>
-
-	<profiles>
-
-		<profile>
-			<id>web</id>
-
-			<modules>
-				<module>gcm-web</module>
-			</modules>
-
-		</profile>
-
-	</profiles>
 
 	<properties>
 		<spring.version>3.2.3.RELEASE</spring.version>
