--- a/gcm/gcm-web/pom.xml
+++ b/gcm/gcm-web/pom.xml
@@ -10,7 +10,7 @@
 	<parent>
 		<groupId>fr.gcm</groupId>
 		<artifactId>gcm</artifactId>
-		<version>1.0.0-SNAPSHOT</version>
+		<version>${globale.version}</version>
 	</parent>
 	<properties>
 		<jsf.version>2.2.1</jsf.version>
