--- a/gcm/pom.xml
+++ b/gcm/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>fr.gcm</groupId>
 	<artifactId>gcm</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>${globale.version}</version>
 	<packaging>pom</packaging>
 
 	<modules>
@@ -18,6 +18,7 @@
 		<logback.version>1.0.13</logback.version>
 		<slf4j.version>1.7.5</slf4j.version>
 		<compiler.version>2.3.2</compiler.version>
+		<globale.version>1.0.0-SNAPSHOT</globale.version>
 	</properties>
 
 	<build>
