--- a/gcm/gcm-dao/pom.xml
+++ b/gcm/gcm-dao/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>fr.gcm</groupId>
     <artifactId>gcm</artifactId>
-    <version>1.0.1</version>
+    <version>1.0.1-SNAPSHOT</version>
    </parent>
   <artifactId>gcm-dao</artifactId>
   <properties>
@@ -60,8 +60,4 @@
 		<artifactId>logback-classic</artifactId>
 	</dependency>      
   </dependencies>
-
-  <scm>
-    <tag>gcm-1.0.1</tag>
-  </scm>
 </project>
