--- a/gcm/gcm-service/pom.xml
+++ b/gcm/gcm-service/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>fr.gcm</groupId>
     <artifactId>gcm</artifactId>
-    <version>1.0.1</version>
+    <version>1.0.1-SNAPSHOT</version>
   </parent>
   <dependencies>
   	<dependency>
@@ -22,8 +22,4 @@
 		<artifactId>logback-classic</artifactId>
 	</dependency>      
   </dependencies>
-
-  <scm>
-    <tag>gcm-1.0.1</tag>
-  </scm>
 </project>
