--- a/gcm/gcm-web/pom.xml
+++ b/gcm/gcm-web/pom.xml
@@ -8,7 +8,7 @@
 	<parent>
 		<groupId>fr.gcm</groupId>
 		<artifactId>gcm</artifactId>
-		<version>1.0.1</version>
+		<version>1.0.1-SNAPSHOT</version>
 	</parent>
 	<properties>
 		<jsf.version>2.2.1</jsf.version>
@@ -90,8 +90,4 @@
 	<build>
 		<finalName>gcm-web</finalName>
 	</build>
-
-  <scm>
-    <tag>gcm-1.0.1</tag>
-  </scm>
 </project>
