--- a/gcm/gcm-web/pom.xml
+++ b/gcm/gcm-web/pom.xml
@@ -8,7 +8,7 @@
 	<parent>
 		<groupId>fr.gcm</groupId>
 		<artifactId>gcm</artifactId>
-		<version>1.0.3-SNAPSHOT</version>
+		<version>1.0.3</version>
 	</parent>
 	<properties>
 		<jsf.version>2.2.1</jsf.version>
