--- a/gcm/pom.xml
+++ b/gcm/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>fr.gcm</groupId>
 	<artifactId>gcm</artifactId>
-	<version>1.0.5-SNAPSHOT</version>
+	<version>1.0.5</version>
 	<packaging>pom</packaging>
 
 	<modules>
@@ -125,7 +125,7 @@
 		<connection>scm:git:https://c7f422cb8cc320173649df3d023755dba78666ce@github.com:mloubari/GCM-TEAM/MedicalOfficeManagement.git</connection>
 		<developerConnection>scm:git:https://c7f422cb8cc320173649df3d023755dba78666ce@github.com:mloubari/GCM-TEAM/MedicalOfficeManagement.git</developerConnection>
 		<url>https://c7f422cb8cc320173649df3d023755dba78666ce@github.com:mloubari/GCM-TEAM/MedicalOfficeManagement.git</url>
-    <tag>HEAD</tag>
+    <tag>gcm-1.0.5</tag>
   </scm>
 
 </project>
