--- a/gcm/gcm-service/pom.xml
+++ b/gcm/gcm-service/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>fr.gcm</groupId>
     <artifactId>gcm</artifactId>
-    <version>1.0.8-SNAPSHOT</version>
+    <version>1.0.8</version>
   </parent>
   <dependencies>
   	<dependency>
